<resources>
    <string name="app_name">test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_phone_carousel">Image_phone_carousel</string>
    <string name="title_Button_carousel_home">Buy now!</string>
    <string name="title_is_new_phone_carousel">New</string>
    <string name="title_details_screen">Product Details</string>
    <string name="shop_details_screen">Shop</string>
    <string name="details_details_screen">Details</string>
    <string name="features_details_screen">Features</string>
    <string name="memory">memory</string>
    <string name="camera_icon">camera_icon</string>
    <string name="cpu_icon">cpu_icon</string>
    <string name="sd_image">sd_image</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="color_phone">color_phone</string>
    <string name="button_like">button_like</string>
    <string name="button_my_cart">button_my_cart</string>
    <string name="button_close">button_close</string>
    <string name="star">star</string>
    <string name="button_done_title">Done</string>
    <string name="filter_options_title">Filter options</string>
    <string name="filter_brand_title">Brand</string>
    <string name="filter_price_title">Price</string>
    <string name="filter_size_title">Size</string>
    <string name="icon_location">icon_location</string>
    <string name="title_location">Zihuatanejo, Gro</string>
    <string name="set_location">set_location</string>
    <string name="button_open_filter">button_open_filter</string>
    <string name="select_category_title">Select Category</string>
    <string name="view_all_title">view all</string>
    <string name="button_phone_title">Phone</string>
    <string name="button_computer_title">Computer</string>
    <string name="button_health_title">Health</string>
    <string name="button_books_title">books</string>
    <string name="set_qr_button">set_qr_button</string>
    <string name="hot_sales_title">Hot sales</string>
    <string name="see_more_title">see more</string>
    <string name="explorer_icon">Explorer_icon</string>
    <string name="explorer_title">Explorer</string>
    <string name="add_address_title">Add address</string>
    <string name="my_cart_title">My Cart</string>
    <string name="total_my_cart_title">Total</string>
    <string name="delivery_my_cart_title">Delivery</string>
    <string name="button_checkout_title">Checkout</string>
    <string name="like_screen_title">Like</string>
    <string name="phone_image">phone_image</string>
    <string name="delete_phone_cart">delete_phone_cart</string>

    <string-array name="Brand">
        <item>-</item>
        <item>Samsung</item>
        <item>Iphone</item>
        <item>Fly</item>
        <item>Xiaomi</item>
    </string-array>

    <string-array name="Price">
        <item>-</item>
        <item>up to 1000$</item>
        <item>up to 2000$</item>
        <item>up to 3000$</item>
        <item>up to 4000$</item>
    </string-array>

    <string-array name="Size">
        <item>-</item>
        <item>1080x2340</item>
        <item>1440x2560</item>
        <item>1080x2220</item>
        <item>1440x2960</item>
    </string-array>
</resources>