<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8F8F8">

        <ImageButton
            android:id="@+id/close_my_cart"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_margin="30dp"
            android:background="@drawable/background_button_close"
            android:paddingStart="10dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FFFFFF"
            android:contentDescription="@string/button_close" />

        <ImageButton
            android:id="@+id/imageButton3"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/background_button_close"
            android:backgroundTint="#FF6E4E"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_baseline_edit_location_24"
            app:layout_constraintBottom_toBottomOf="@+id/close_my_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/close_my_cart"
            app:tint="#FFFFFF"
            android:contentDescription="@string/set_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/add_address_title"
            android:textColor="#010035"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
            app:layout_constraintEnd_toStartOf="@+id/imageButton3"
            app:layout_constraintStart_toEndOf="@+id/close_my_cart"
            app:layout_constraintTop_toTopOf="@+id/imageButton3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_cart_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#010035"
            android:textSize="35sp"
            android:layout_marginTop="120dp"
            android:layout_marginStart="42dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="650dp"
                android:background="@drawable/background_my_card"
                android:layout_marginTop="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list"
                    android:name="com.example.test.ItemFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="390dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:context=".homeScreen.presentation.ItemFragment"
                    tools:listitem="@layout/recycle_item_my_card" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/materialDivider"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"

                    app:dividerColor="#41FFFFFF"
                    app:layout_constraintTop_toBottomOf="@+id/list" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/total_my_cart_title"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

                <TextView
                    android:id="@+id/delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/delivery_my_cart_title"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@id/total"
                    app:layout_constraintTop_toBottomOf="@id/total"/>


                <TextView
                    android:id="@+id/total_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/total"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/total"
                    tools:text="$6,000 us"/>

                <TextView
                    android:id="@+id/delivery_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/delivery"
                    app:layout_constraintStart_toStartOf="@+id/total_value"
                    app:layout_constraintTop_toTopOf="@+id/delivery"
                    tools:text="Free"/>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/materialDivider2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="27dp"
                    app:dividerColor="#41FFFFFF"
                    app:layout_constraintBottom_toTopOf="@id/add_to_cart" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_to_cart"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:layout_margin="30dp"
                    android:backgroundTint="#FF6E4E"
                    app:cornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/button_checkout_title"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
